--- a/TODOs/TODOs.entitlements
+++ b/TODOs/TODOs.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.FFR.freetime</string>
+		<string>group.com.frr.todos</string>
 	</array>
 </dict>
 </plist>
