--- a/TODOsTests/Info.plist
+++ b/TODOsTests/Info.plist
@@ -14,9 +14,7 @@
 	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundlePackageType</key>
 	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
-	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>$(BUNDLE_IDENTIFIER)</string>
 </dict>
 </plist>
