--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,4 +11,4 @@ jobs:
 
     steps:
     - name: Xcodebuild test
-      run: xcodebuild clean test -project TODOs.xcodeproj -scheme TODOs -destination "platform=iOS Simulator,name=iPhone X"
+      run: xcodebuild clean test -project 'TODOs.xcodeproj' -scheme 'TODOs' -destination 'platform=iOS Simulator,name=iPhone X'
