--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,4 +12,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Xcodebuild test
-      run: xcodebuild clean test -project 'TODOs.xcodeproj' -scheme 'TODOs' -destination 'platform=iOS Simulator,name=iPhone X'
+      run: xcodebuild clean test -project 'TODOs.xcodeproj' -scheme 'TODOs' -destination 'platform=iOS Simulator,name=iPhone 11 Pro'
