--- a/TODOs.xcodeproj/xcshareddata/xcschemes/[DEV] TODOs.xcscheme
+++ b/TODOs.xcodeproj/xcshareddata/xcschemes/[DEV] TODOs.xcscheme
@@ -59,6 +59,13 @@
             ReferencedContainer = "container:TODOs.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "TZ"
+            value = "EST"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
