--- a/TODOs.xcodeproj/xcshareddata/xcschemes/[DEV] TODOs.xcscheme
+++ b/TODOs.xcodeproj/xcshareddata/xcschemes/[DEV] TODOs.xcscheme
@@ -62,7 +62,7 @@
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "TZ"
-            value = "EST"
+            value = "PST"
             isEnabled = "YES">
          </EnvironmentVariable>
       </EnvironmentVariables>
