--- a/TODOs.xcodeproj/xcshareddata/xcschemes/TODOsWidgetExtension.xcscheme
+++ b/TODOs.xcodeproj/xcshareddata/xcschemes/TODOsWidgetExtension.xcscheme
@@ -57,8 +57,18 @@
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES"
       launchAutomaticallySubstyle = "2">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.springboard">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "520F6E38257DD58B002154D2"
+            BuildableName = "TODOsWidgetExtension.appex"
+            BlueprintName = "TODOsWidgetExtension"
+            ReferencedContainer = "container:TODOs.xcodeproj">
+         </BuildableReference>
+      </RemoteRunnable>
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "0A424A402384B0FC00E1FC34"
@@ -66,7 +76,7 @@
             BlueprintName = "TODOs"
             ReferencedContainer = "container:TODOs.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "_XCWidgetKind"
